[package]
name = "kmer-embeddings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kmer-embeddings"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
burn = { version = "0.14", features = ["train", "wgpu", "fusion"] }
#burn = { version = "0.14", features = ["train", "wgpu", "fusion", "tch", "cuda-jit"] }
# tch = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
mimalloc = "0.1.43"
flexi_logger = "0.29.0"
rerun = "0.18.0"
bumpalo = { version = "3.16.0", features = ["collections"] }
bio = "2.0.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
pulp = "0.18.22"
divan = "0.1.14"
ratatui = "0.28.1"
serde = { version = "1.0.209", features = ["derive"] }
# bon = "2.1.0"

[[bench]]
name = "kmer_generator"
harness = false
